@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-11T08:23:45Z",
-  "count_outdated" : 34,
-  "uniques_outdated" : 8,
-  "count" : 40,
-  "uniques" : 11,
+  "timestamp" : "2022-04-11T16:28:53Z",
+  "count_outdated" : 46,
+  "uniques_outdated" : 10,
+  "count" : 49,
+  "uniques" : 12,
   "views" : [
-    {
-      "timestamp": "2022-03-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 12 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
