@@ -1,3 +1,9 @@
+2022-04-11T16:28:53Z:
+* notice: last 14d: all unq: 3 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 34 8 / 40 11
+* notice: next accum: outdated-all outdated-unq / all unq: 46 10 / 49 12
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -1 -9
+
 2022-04-11T08:23:45Z:
 * notice: last 14d: all unq: 6 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 34 8 / 49 12
